# flutter_nfc_kit_aurora

./: .gdbinit  .gitignore  LICENSE  README.md  pubspec.yaml
aurora/: CMakeLists.txt  flutter_nfc_kit_aurora_plugin.cpp
aurora/include/flutter_nfc_kit_aurora/: flutter_nfc_kit_aurora_plugin.h  globals.h  help_functions.h  qt_headers.h
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/handlers_headers/: nfcd_adapter_handler.h  nfcd_daemon_handler.h  nfcd_isodep_handler.h  nfcd_ndef_handler.h  nfcd_tag_handler.h  nfcd_tagclassic_handler.h  nfcd_tagtype2_handler.h  nfcd_typifier.h
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/src/: help_functions.cpp  nfcd_adapter_handler.cpp  nfcd_daemon_handler.cpp  nfcd_isodep_handler.cpp  nfcd_ndef_handler.cpp  nfcd_tag_handler.cpp  nfcd_tagclassic_handler.cpp  nfcd_tagtype2_handler.cpp
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/src/dbus/: nfcd_constants.cpp  nfcd_constants.h
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/src/dbus/dbus_ifaces/: nfcd_adapter_dbus_iface.cpp  nfcd_daemon_dbus_iface.cpp  nfcd_isodep_dbus_iface.cpp  nfcd_ndef_dbus_iface.cpp  nfcd_tag_dbus_iface.cpp  nfcd_tagclassic_dbus_iface.cpp  nfcd_tagtype2_dbus_iface.cpp
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/src/dbus/dbus_ifaces/headers/: nfcd_adapter_dbus_iface.h  nfcd_daemon_dbus_iface.h  nfcd_isodep_dbus_iface.h  nfcd_ndef_dbus_iface.h  nfcd_tag_dbus_iface.h  nfcd_tagclassic_dbus_iface.h  nfcd_tagtype2_dbus_iface.h
aurora/include/flutter_nfc_kit_aurora/nfcd_handlers/src/headers/: nfcd_adapter_handler_src.h  nfcd_daemon_handler_src.h  nfcd_isodep_handler_src.h  nfcd_ndef_handler_src.h  nfcd_tag_handler_src.h  nfcd_tagclassic_handler_src.h  nfcd_tagtype2_handler_src.h
docs/templates/: templates.cpp  templates.dart  templates.h
example/: README.md  pubspec.yaml
example/aurora/: CMakeLists.txt  main.cpp
example/aurora/desktop/: com.example.flutter_nfc_kit_aurora_example.desktop
example/aurora/rpm/: com.example.flutter_nfc_kit_aurora_example.spec
example/lib/: main.dart  mainOld.dart
example/test/: widget_test.dart
lib/: flutter_nfc_kit_aurora.dart  flutter_nfc_kit_aurora_method_channel.dart  flutter_nfc_kit_aurora_platform_interface.dart
